--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Stef's Class Blog
+subtitle: This is where I will post updates about my progress in CSCI 462.
 ---
