--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Stef's Class Blog
-subtitle: This is where I will post updates about my progress in CSCI 462.
+subtitle: Class Progress for CSCI 462
 ---
